--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,43 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.maincontainer {
+  width: max-content;
+}
+
+ul {
+  list-style: none;
+  background-color: gray;
+  color: white;
+}
+
+li {
+  display: block;
+  width: max-content;
+  line-height: 30px;
+  padding: 5px;
+  position: relative;
+  width: max-content;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.level2 {
+  display: none;
+}
+
+li:hover span,
+li:hover a {
+  text-decoration: underline;
+}
+
+.level1 > li:hover .level2 {
+  display: block;
+  position: absolute;
+  left: 100%;
+  top: 0;
+}
