--- a/Homework8/scss/styles.scss
+++ b/Homework8/scss/styles.scss
@@ -4,7 +4,7 @@
 @import "btn";
 
 .maincontainer {
-  max-width: $desktopwidth;
+  max-width: $desktop-width;
   margin: auto;
   padding: 0 40px;
 }
@@ -20,24 +20,27 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+}
 
-  .logo {
-    h1 {
-      @include fontstyle($main-font, 32, 400, 35, $color-primary);
-      letter-spacing: 0.06em;
-    }
-    p {
-      @include fontstyle($secondaty-font, 13, 400, 15, $color-light-xl);
-      letter-spacing: 0.1em;
-      padding-top: 10px;
-    }
+.logo {
+  h1 {
+    @include fontstyle($main-font, 32, 35, $color-primary);
   }
-  nav {
-    ul {
-      display: flex;
-    }
+  p {
+    @include fontstyle($secondaty-font, 13, 15, $color-light-xl);
+    letter-spacing: 0.1em;
+    padding-top: 10px;
+  }
+}
+nav {
+  .level_1 > li > a {
+    display: none;
+  }
+  .level_2 {
+    display: flex;
+
     a {
-      @include fontstyle($secondaty-font, 15, 400, 24, $color-dark-s);
+      @include fontstyle($secondaty-font, 15, 24, $color-dark-s);
       margin-left: 35px;
       &:hover {
         color: $color-light-s;
@@ -45,6 +48,7 @@
     }
   }
 }
+
 .page_about .link_about,
 .page_pets .link_pets,
 .page_help .link_lelp,
@@ -67,13 +71,15 @@ a:active {
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: flex-start;
+  padding-bottom: 30px;
   h2 {
-    @include fontstyle($main-font, 44, 400, 57.2, $color-light-xl);
+    @include fontstyle($main-font, 44, 57.2, $color-light-xl);
     max-width: 325px;
   }
   p {
-    @include fontstyle($secondaty-font, 15, 400, 24, $color-dark-s);
+    @include fontstyle($secondaty-font, 15, 24, $color-dark-s);
     max-width: 460px;
+    padding-bottom: 30px;
   }
 }
 
@@ -86,24 +92,24 @@ section:nth-child(even) {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-flow: row wrap;
   img {
     width: 300px;
     height: 408px;
   }
-  .section-about_content {
-    padding: 14px 0;
-    width: 380px;
-    display: flex;
-    flex-flow: column nowrap;
-    h3 {
-      @include fontstyle($main-font, 35, 400, 45.5, $color-dark-l);
-      letter-spacing: 0.06em;
-      max-width: 370px;
-    }
-    p {
-      padding-top: 25px;
-      @include fontstyle($secondaty-font, 15, 400, 24, $color-dark-xl);
-    }
+}
+.section-about_content {
+  padding: 14px 0;
+  width: 380px;
+  display: flex;
+  flex-flow: column nowrap;
+  h3 {
+    @include fontstyle($main-font, 35, 45.5, $color-dark-l);
+    max-width: 370px;
+  }
+  p {
+    padding-top: 25px;
+    @include fontstyle($secondaty-font, 15, 24, $color-dark-xl);
   }
 }
 
@@ -115,48 +121,45 @@ section:nth-child(even) {
     justify-content: space-around;
     align-items: center;
     padding: 20px 0 40px 0;
-    h3 {
-      max-width: 400px;
-      @include fontstyle($main-font, 35, 400, 45, $color-dark-l);
-      letter-spacing: 0.06em;
-      text-align: center;
+  }
+  h3 {
+    max-width: 400px;
+    @include fontstyle($main-font, 35, 45, $color-dark-l);
+    text-align: center;
+  }
+}
+.section-pets__carousel {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  a.btn-arrow-r {
+    order: 1;
+  }
+  figure {
+    height: 435px;
+    width: 270px;
+    background-color: $color-light-s;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 9px;
+    padding-bottom: 30px;
+    &:hover {
+      box-shadow: 0px 2px 35px 14px $color-shadow;
+      cursor: pointer;
     }
-    .section-pets__carousel {
-      width: 100%;
-      display: flex;
-      flex-flow: row nowrap;
-      justify-content: space-between;
-      align-items: center;
-      a.btn-arrow-r {
-        order: 1;
-      }
-      figure {
-        height: 435px;
-        width: 270px;
-        background-color: $color-light-s;
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: space-between;
-        align-items: center;
-        border-radius: 9px;
-        padding-bottom: 30px;
-        &:hover {
-          box-shadow: 0px 2px 35px 14px $color-shadow;
-          cursor: pointer;
-        }
-        img {
-          width: 270px;
-          height: 270px;
-        }
-        p {
-          @include fontstyle($main-font, 20, 400, 23, $color-dark-l);
-          letter-spacing: 0.06em;
-        }
-      }
+    img {
+      width: 270px;
+      height: 270px;
+    }
+    p {
+      @include fontstyle($main-font, 20, 23, $color-dark-l);
     }
   }
 }
-
 .section-help {
   .maincontainer {
     min-height: 609px;
@@ -165,32 +168,31 @@ section:nth-child(even) {
     justify-content: space-around;
     align-items: center;
     padding: 20px 0 40px 0;
-    h3 {
-      max-width: 308px;
-      text-align: center;
-      @include fontstyle($main-font, 35, 400, 45, $color-dark-l);
-      letter-spacing: 0.06em;
-    }
-    .section-help__list {
-      min-height: 281px;
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: center;
-      align-items: center;
-      align-content: space-between;
-      figure {
-        min-height: 113px;
-        margin: 0 60px;
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: space-between;
-        align-items: center;
-        @include fontstyle($main-font, 20, 400, 23, $color-dark-l);
-        img {
-          width: 60px;
-          height: 60px;
-        }
-      }
+  }
+  h3 {
+    max-width: 308px;
+    text-align: center;
+    @include fontstyle($main-font, 35, 45, $color-dark-l);
+  }
+  .section-help__list {
+    min-height: 281px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: space-between;
+  }
+  figure {
+    min-height: 113px;
+    margin: 20px 60px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    @include fontstyle($main-font, 20, 23, $color-dark-l);
+    img {
+      width: 60px;
+      height: 60px;
     }
   }
 }
@@ -203,98 +205,156 @@ section:nth-child(even) {
     justify-content: center;
     align-items: center;
     > img {
-      width: 505px;
       height: 261px;
-    }
-    .section-donation__discription {
-      max-width: 380px;
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: space-between;
-      align-items: flex-start;
-      margin-left: 30px;
-      > *:not(h3) {
-        margin-top: 20px;
-      }
-    }
-    h3 {
-      max-width: 308px;
-      @include fontstyle($main-font, 35, 400, 45, $color-dark-l);
-      letter-spacing: 0.06em;
-    }
-    h5 {
-      @include fontstyle($main-font, 15, 400, 16.5, $color-dark-l);
-    }
-    .section-donation__credit-card-data {
-      display: flex;
-      flex-flow: row nowrap;
-      align-items: center;
-      padding: 10px 15px;
-      background-color: $color-primary;
-      border-radius: 9px;
-      p {
-        @include fontstyle($main-font, 20, 400, 23, $color-dark-l);
-        margin-left: 15px;
-      }
-    }
-    .section-donation__legal {
-      @include fontstyle($secondaty-font, 12, 400, 18, $color-dark-m);
-      font-style: italic;
+      width: 505px;
     }
   }
+  .section-donation__discription {
+    max-width: 380px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-left: 30px;
+    > *:not(h3) {
+      margin-top: 20px;
+    }
+  }
+  h3 {
+    max-width: 308px;
+    @include fontstyle($main-font, 35, 45, $color-dark-l);
+  }
+  h5 {
+    @include fontstyle($main-font, 15, 16.5, $color-dark-l);
+  }
+}
+.section-donation__credit-card-data {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding: 10px 15px;
+  background-color: $color-primary;
+  border-radius: 9px;
+  p {
+    @include fontstyle($main-font, 20, 23, $color-dark-l);
+    margin-left: 15px;
+  }
+}
+.section-donation__legal {
+  @include fontstyle($secondaty-font, 12, 18, $color-dark-m);
+  font-style: italic;
 }
 
 footer {
   background: $header_footer_gradient;
   .maincontainer {
     min-height: 350px;
+    max-height: max-content;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    h3 {
-      @include fontstyle($main-font, 35, 400, 46, $color-light-xl);
-      letter-spacing: 0.06em;
-    }
-    a,
-    p {
-      @include fontstyle($main-font, 20, 400, 23, $color-primary);
-      letter-spacing: 0.06em;
-    }
-    .contacts {
-      min-height: 234px;
-      max-width: 302px;
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: space-between;
-      .contacts__email,
-      .contacts__phone {
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        img {
-          margin-right: 20px;
-        }
-      }
-    }
-    .location {
-      min-height: 234px;
-      max-width: 302px;
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: space-between;
-      .location__boston,
-      .location__london {
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        img {
-          margin-right: 20px;
-        }
-      }
-    }
-    img {
+
+    > img {
       align-self: flex-end;
+      width: 300px;
+      height: 315px;
     }
   }
+  h3 {
+    @include fontstyle($main-font, 35, 46, $color-light-xl);
+  }
+  a,
+  p {
+    @include fontstyle($main-font, 20, 23, $color-primary);
+  }
+}
+.contacts {
+  min-height: 234px;
+  max-width: 302px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+}
+.contacts__email,
+.contacts__phone {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  img {
+    margin-right: 20px;
+  }
+}
+
+.location {
+  min-height: 234px;
+  max-width: 302px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+}
+.location__boston,
+.location__london {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  img {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .maincontainer {
+    padding: 0 30px;
+  }
+  .page_about header {
+    min-height: auto;
+  }
+  .startscreen-container {
+    background: none;
+    min-height: max-content;
+  }
+  nav {
+    .level_1 > li {
+      > a {
+        display: block;
+      }
+      position: relative;
+    }
+    .level_2 {
+      display: none;
+    }
+    .level_1 > li:hover .level_2 {
+      display: flex;
+      flex-flow: column nowrap;
+      width: 200px;
+      position: absolute;
+      right: -100%;
+    }
+  }
+
+  .section-pets__carousel {
+    justify-content: center;
+  }
+  .section-pets__carousel > a {
+    display: none;
+  }
+  .section-help__list figure {
+    margin: 10px 20px;
+  }
+  .section-donation .maincontainer > img {
+    display: none;
+  }
+  .section-donation__discription {
+    margin: 0 0 20px 0;
+  }
+  footer .maincontainer {
+    justify-content: center;
+    > div {
+      margin: 20px 0;
+    }
+  }
+}
+
+@media (max-width: $smartphone-width) {
 }
