--- a/Homework8/scss/variables.scss
+++ b/Homework8/scss/variables.scss
@@ -7,7 +7,7 @@ $header_footer_gradient: linear-gradient(
 );
 
 $color-primary: #f1cdb3;
-$color-primary-light: #FDDCC4;
+$color-primary-light: #fddcc4;
 $color-light-s: #fafafa;
 $color-light-l: #f6f6f6;
 $color-light-xl: #ffffff;
@@ -23,5 +23,6 @@ $main-font: Georgia;
 $secondaty-font: Arial;
 
 // Grid
-
-$desktopwidth: 1280px;
+$desktop-width: 1280px;
+$tablet-width: 768px;
+$smartphone-width: 320px;
