--- a/Homework8/scss/_btn.scss
+++ b/Homework8/scss/_btn.scss
@@ -32,8 +32,29 @@
   transform: rotate(-180deg) translate(50%, 50%);
 }
 
+.btn-pages {
+  width: 52px;
+  height: 52px;
+  border: 2px solid $color-primary;
+  border-radius: 50%;
+  @include fontstyle($main-font, 20, 23, $color-dark-3xl);
+  letter-spacing: 0.06em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-disabled {
+  border-color: $color-dark-s;
+  color: $color-dark-s;
+  cursor: auto;
+}
+.btn-pages-active {
+  background-color: $color-primary;
+}
+
 .btn:hover,
-.btn-arrow:hover {
+.btn-arrow:hover,
+.btn-pages:hover:not(.btn-disabled) {
   background-color: $color-primary-light;
   border-color: transparent;
 }
