html&css hw8 our_pets link & carousel margin fixed

--- a/Homework8/scss/styles.scss
+++ b/Homework8/scss/styles.scss
@@ -288,6 +288,9 @@ section:nth-child(even) {
   .section-pets__carousel > a {
     display: none;
   }
+  .section-pets__carousel figure {
+    margin: 15px;
+  }
   .section-help__list figure {
     margin: 10px 20px;
   }
